Bug 317475 Top level window with focus should have "ACTIVE" state set r=aaronleventhal sr=roc