accessible/src/atk/nsRootAccessibleWrap.h
@@ -23,7 +23,7 @@
  *
  * Original Author: Bolian Yin (bolian.yin@sun.com)
  *
- * Contributor(s): 
+ * Contributor(s): Ginn Chen (ginn.chen@sun.com)
  *
  * Alternatively, the contents of this file may be used under the terms of
  * either the GNU General Public License Version 2 or later (the "GPL"), or
@@ -58,6 +58,7 @@ public:
 
     NS_IMETHOD GetParent(nsIAccessible **  aParent);
     NS_IMETHOD GetRole(PRUint32 *aRole);
+    NS_IMETHOD GetExtState(PRUint32 *aState);
 };
 
 #endif   /* __NS_ROOT_ACCESSIBLE_WRAP_H__ */
